--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web app to check if twitch streamers are online or offline.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile:sass": "node-sass sass/main.scss css/style.css -w"
   },
   "repository": {
     "type": "git",
